correction authentification et yaml
