# public/api.yaml
@@ -4,9 +4,8 @@ info:
   description: API pour gérer les utilisateurs dans l'application
   version: 1.0.0
 servers:
-  - url: http://localhost/api/v1
+  - url: http://localhost:3000/api/v1
 paths:
-  paths:
   /login:
     post:
       summary: "Login utilisateur"
@@ -62,13 +61,12 @@ paths:
                   message:
                     type: string
                     example: "Unauthorized"
-
   /register:
     post:
-      summary: "Enregistrer un utilisateur"
-      description: "Enregistrer un nouvel utilisateur et l'associer à un client."
+      summary: Enregistrer un nouvel utilisateur
+      description: Enregistre un nouvel utilisateur et associe un client existant à cet utilisateur.
       tags:
-        - Auth
+        - Authentification
       requestBody:
         required: true
         content:
@@ -78,19 +76,31 @@ paths:
               properties:
                 clientid:
                   type: integer
+                  description: L'ID du client à associer avec l'utilisateur.
                   example: 1
                 login:
                   type: string
+                  description: Le login de l'utilisateur.
                   example: "nouveau_utilisateur"
+                nom:
+                  type: string
+                  description: Le nom de l'utilisateur.
+                  example: "Doe"
+                prenom:
+                  type: string
+                  description: Le prénom de l'utilisateur.
+                  example: "John"
                 password:
                   type: string
+                  description: Le mot de passe de l'utilisateur.
                   example: "password123"
                 role:
                   type: string
+                  description: Le rôle de l'utilisateur.
                   example: "CLIENT"
       responses:
         '200':
-          description: "Utilisateur enregistré avec succès"
+          description: Utilisateur enregistré avec succès.
           content:
             application/json:
               schema:
@@ -98,33 +108,39 @@ paths:
                 properties:
                   status:
                     type: string
-                    example: "success"
+                    example: success
                   data:
                     type: object
                     properties:
                       client:
                         type: object
+                        description: Détails du client associé.
                         properties:
                           id:
                             type: integer
                             example: 1
-                          surname:
+                          nom:
                             type: string
-                            example: "Dupont"
+                            example: "Doe"
+                          prenom:
+                            type: string
+                            example: "John"
                       user:
                         type: object
+                        description: Détails de l'utilisateur créé.
                         properties:
                           id:
                             type: integer
-                            example: 1
+                            example: 10
                           login:
                             type: string
                             example: "nouveau_utilisateur"
                       token:
                         type: string
-                        example: "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9..."
+                        description: Le token d'accès pour l'utilisateur.
+                        example: "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9"
         '400':
-          description: "Échec de l'enregistrement"
+          description: Erreur de requête ou client non trouvé.
           content:
             application/json:
               schema:
@@ -132,7 +148,7 @@ paths:
                 properties:
                   status:
                     type: string
-                    example: "error"
+                    example: error
                   data:
                     type: object
                     properties:
@@ -140,7 +156,38 @@ paths:
                         type: array
                         items:
                           type: string
-                          example: "Client does not exist"
+                          example: Client does not exist
+        '422':
+          description: Erreur de validation des données fournies.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 422
+                  data:
+                    type: object
+                    properties:
+                      nom:
+                        type: array
+                        items:
+                          type: string
+                          example: Le nom est obligatoire.
+                      prenom:
+                        type: array
+                        items:
+                          type: string
+                          example: Le prénom est obligatoire.
+                      password:
+                        type: array
+                        items:
+                          type: string
+                          example: The password field confirmation does not match.
+                  message:
+                    type: string
+                    example: Erreur de validation des données fournies.
   /users:
     post:
       summary: Crée un nouvel utilisateur
