# routes/api.php
@@ -30,40 +30,8 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-// Route::group(['middleware' => 'auth:api', 'prefix' => 'v1'], function () {
-//    // Routes pour les clients
-//    Route::apiResource('/clients', ClientController::class)->only(['index', 'store', 'show']);
-    
-//    // Routes de filtrage des clients
-//    Route::get('/clients/filter', [ClientController::class, 'filterByAccount']);
-//    Route::get('/clients/status', [ClientController::class, 'filterByStatus']);
-//    Route::post('/clients/telephone', [ClientController::class, 'searchByTelephone']);
-//    Route::get('/clients/{id}', [ClientController::class, 'show']);
-//    Route::post('/clients/{id}/dettes', [ClientController::class, 'getClientDettes']);
-//    Route::post('/clients/{id}/user', [ClientController::class, 'getClientWithUser']);
-
-
-//    // Routes pour les users
-//    Route::apiResource('/users', UserController::class)->only(['index', 'store']);
-//    Route::delete('/users/{id}', [ClientController::class, 'deleteAccount']);
-
-   
-//    // Routes d'authentification
-//    Route::post('/login', [AuthController::class, 'login']);
-//    Route::post('/register', [AuthController::class, 'register']);
-   
-//    // Routes pour les articles
-//    Route::post('/articles', [ArticleController::class, 'store']);
-//    Route::get('/articles', [ArticleController::class, 'index']);
-//    Route::patch('/articles/{id}', [ArticleController::class, 'updateStock']);
-//    Route::post('/articles/stock', [ArticleController::class, 'updateMultipleStocks']);
-//    Route::get('/articles/{id}', [ArticleController::class, 'showById']);
-//    Route::post('/articles/libelle', [ArticleController::class, 'showByLibelle']);
-// });
-
-
 // Grouper les routes sous le préfixe 'v1'
-Route::prefix('v1')->group(function () {
+Route::group(['middleware' => 'auth:api', 'prefix' => 'v1'], function () {
     // Routes de filtrage des clients
     Route::get('/clients/filter', [ClientController::class, 'filterByAccount']);
     Route::get('/clients/status', [ClientController::class, 'filterByStatus']);
@@ -90,10 +58,6 @@ Route::prefix('v1')->group(function () {
     Route::get('/articles/{id}', [ArticleController::class, 'showById']);
     Route::post('/articles/libelle', [ArticleController::class, 'showByLibelle']);
 });
-
-
-
-
 
 
 
